# libfoo

./: .gitignore  CMakeLists.txt  README  foo-config-version.cmake.in  foo-config.cmake.in
inc/: CMakeLists.txt  foo.h
src/: CMakeLists.txt  foo.c
